@@ -12,6 +12,7 @@ require("prototypes.particle")
 -- require("prototypes.recipe-changes")
 require("prototypes.recipe")
 require("prototypes.resource")
+require("prototypes.resource-changes")
 require("prototypes.rocket-silo")
 require("prototypes.technology")
 require("prototypes.technology-changes")
