@@ -25,12 +25,13 @@ data:extend({
     selection_box = {{ -0.5, -0.5}, {0.5, 0.5}},
     autoplace = resource_autoplace.resource_autoplace_settings({
       name = "sp-aluminum-ore",
-      order = "d",
-      base_density = 1,
-      base_spots_per_km2 = 0.75,
+      order = "g",
+      base_density = 10,
+      base_spots_per_km2 = 0.5,
+      richness_post_multiplier = 3*1.5,
       has_starting_area_placement = false,
-      random_spot_size_minimum = 0.25,
-      random_spot_size_maximum = 3,
+      random_spot_size_minimum = 0.75/3,
+      random_spot_size_maximum = 1/3,
       regular_blob_amplitude_multiplier = 1,
       regular_rq_factor_multiplier = 0.9,
       candidate_spot_count = 22,
@@ -74,11 +75,12 @@ data:extend({
     autoplace = resource_autoplace.resource_autoplace_settings({
       name = "sp-chromite",
       order = "f",
-      base_density = 1,
-      base_spots_per_km2 = 0.75,
+      base_density = 9,
+      base_spots_per_km2 = 0.4,
+      richness_post_multiplier = 3*1,
       has_starting_area_placement = false,
-      random_spot_size_minimum = 0.25,
-      random_spot_size_maximum = 3,
+      random_spot_size_minimum = 0.75/3,
+      random_spot_size_maximum = 1.5/3,
       regular_blob_amplitude_multiplier = 1,
       regular_rq_factor_multiplier = 0.9,
       candidate_spot_count = 22,
@@ -123,12 +125,13 @@ data:extend({
     selection_box = {{ -0.5, -0.5}, {0.5, 0.5}},
     autoplace = resource_autoplace.resource_autoplace_settings({
       name = "sp-limestone",
-      order = "d",
-      base_density = 0.5,
-      base_spots_per_km2 = 0.75,
+      order = "a",
+      base_density = 1,
+      base_spots_per_km2 = 0.1,
+      richness_post_multiplier = 3*1,
       has_starting_area_placement = false,
-      random_spot_size_minimum = 0.25,
-      random_spot_size_maximum = 3,
+      random_spot_size_minimum = 3/3,
+      random_spot_size_maximum = 4/3,
       regular_blob_amplitude_multiplier = 1,
       regular_rq_factor_multiplier = 0.9,
       candidate_spot_count = 22,
@@ -173,12 +176,13 @@ data:extend({
     selection_box = {{ -0.5, -0.5}, {0.5, 0.5}},
     autoplace = resource_autoplace.resource_autoplace_settings({
       name = "sp-titanium-ore",
-      order = "d",
-      base_density = 1,
-      base_spots_per_km2 = 0.75,
+      order = "m",
+      base_density = 8,
+      base_spots_per_km2 = 0.39,
+      richness_post_multiplier = 3*2,
       has_starting_area_placement = false,
-      random_spot_size_minimum = 0.25,
-      random_spot_size_maximum = 3,
+      random_spot_size_minimum = 1/3,
+      random_spot_size_maximum = 1.25/3,
       regular_blob_amplitude_multiplier = 1,
       regular_rq_factor_multiplier = 0.9,
       candidate_spot_count = 22,
@@ -224,11 +228,12 @@ data:extend({
     autoplace = resource_autoplace.resource_autoplace_settings({
       name = "sp-magnesium-ore",
       order = "d",
-      base_density = 1,
-      base_spots_per_km2 = 0.75,
+      base_density = 8.5,
+      base_spots_per_km2 = 0.37,
+      richness_post_multiplier = 3*1,
       has_starting_area_placement = false,
-      random_spot_size_minimum = 0.25,
-      random_spot_size_maximum = 3,
+      random_spot_size_minimum = 0.8/3,
+      random_spot_size_maximum = 1/3,
       regular_blob_amplitude_multiplier = 1,
       regular_rq_factor_multiplier = 0.9,
       candidate_spot_count = 22,
@@ -273,12 +278,13 @@ data:extend({
     selection_box = {{ -0.5, -0.5}, {0.5, 0.5}},
     autoplace = resource_autoplace.resource_autoplace_settings({
       name = "sp-nickel-ore",
-      order = "d",
-      base_density = 1,
-      base_spots_per_km2 = 0.75,
+      order = "b",
+      base_density = 4,
+      base_spots_per_km2 = 0.27,
+      richness_post_multiplier = 3*1,
       has_starting_area_placement = false,
-      random_spot_size_minimum = 0.25,
-      random_spot_size_maximum = 3,
+      random_spot_size_minimum = 0.8/3,
+      random_spot_size_maximum = 1.2/3,
       regular_blob_amplitude_multiplier = 1,
       regular_rq_factor_multiplier = 0.9,
       candidate_spot_count = 22,
@@ -324,11 +330,12 @@ data:extend({
     autoplace = resource_autoplace.resource_autoplace_settings({
       name = "sp-spodumene",
       order = "d",
-      base_density = 0.8,
-      base_spots_per_km2 = 0.75,
+      base_density = 1,
+      base_spots_per_km2 = 0.13,
+      richness_post_multiplier = 3*1,
       has_starting_area_placement = false,
-      random_spot_size_minimum = 0.25,
-      random_spot_size_maximum = 3,
+      random_spot_size_minimum = 1.5/3,
+      random_spot_size_maximum = 2/3,
       regular_blob_amplitude_multiplier = 1,
       regular_rq_factor_multiplier = 0.9,
       candidate_spot_count = 22,
@@ -373,10 +380,11 @@ data:extend({
       name = "sp-tinstone",
       order = "d",
       base_density = 10,
-      base_spots_per_km2 = 0.75,
+      base_spots_per_km2 = 0.33,
+      richness_post_multiplier = 3*2,
       has_starting_area_placement = true,
-      random_spot_size_minimum = 0.25,
-      random_spot_size_maximum = 3,
+      random_spot_size_minimum = 1/3,
+      random_spot_size_maximum = 1.5/3,
       regular_blob_amplitude_multiplier = 1,
       regular_rq_factor_multiplier = 0.9,
       candidate_spot_count = 22,
@@ -421,12 +429,13 @@ data:extend({
     selection_box = {{ -0.5, -0.5}, {0.5, 0.5}},
     autoplace = resource_autoplace.resource_autoplace_settings({
       name = "sp-tungsten-ore",
-      order = "d",
-      base_density = 1,
-      base_spots_per_km2 = 0.75,
+      order = "m",
+      base_density = 7,
+      base_spots_per_km2 = 0.47,
+      richness_post_multiplier = 3*2,
       has_starting_area_placement = false,
-      random_spot_size_minimum = 0.25,
-      random_spot_size_maximum = 3,
+      random_spot_size_minimum = 0.7/3,
+      random_spot_size_maximum = 0.9/3,
       regular_blob_amplitude_multiplier = 1,
       regular_rq_factor_multiplier = 0.9,
       candidate_spot_count = 22,
@@ -469,12 +478,13 @@ data:extend({
     selection_box = {{ -0.5, -0.5}, {0.5, 0.5}},
     autoplace = resource_autoplace.resource_autoplace_settings({
       name = "sp-zinc-ore",
-      order = "d",
-      base_density = 1,
-      base_spots_per_km2 = 0.75,
+      order = "h",
+      base_density = 8.5,
+      base_spots_per_km2 = 0.42,
+      richness_post_multiplier = 3*1,
       has_starting_area_placement = false,
-      random_spot_size_minimum = 0.25,
-      random_spot_size_maximum = 3,
+      random_spot_size_minimum = 0.6/3,
+      random_spot_size_maximum = 1.5/3,
       regular_blob_amplitude_multiplier = 1,
       regular_rq_factor_multiplier = 0.9,
       candidate_spot_count = 22,
@@ -517,12 +527,13 @@ data:extend({
     selection_box = {{ -0.5, -0.5}, {0.5, 0.5}},
     autoplace = resource_autoplace.resource_autoplace_settings({
       name = "sp-zirconium-ore",
-      order = "d",
-      base_density = 1,
-      base_spots_per_km2 = 0.75,
+      order = "h",
+      base_density = 5,
+      base_spots_per_km2 = 0.38,
+      richness_post_multiplier = 3*1,
       has_starting_area_placement = false,
-      random_spot_size_minimum = 0.25,
-      random_spot_size_maximum = 3,
+      random_spot_size_minimum = 0.6/3,
+      random_spot_size_maximum = 1/3,
       regular_blob_amplitude_multiplier = 1,
       regular_rq_factor_multiplier = 0.9,
       candidate_spot_count = 22,
@@ -577,16 +588,15 @@ if mods["Krastorio2"] then
       selection_box = {{-3.5, -3.5 }, {3.5, 3.5}},
       autoplace = resource_autoplace.resource_autoplace_settings({
         name = "sp-blunagium",
-        order = "f",
+        order = "z",
         base_density = 1,
-        richness_multiplier = 1,
-        richness_multiplier_distance_bonus = 1.5,
-        base_spots_per_km2 = 0.2,
+        richness_post_multiplier = 20,
+        richness_post_multiplier_distance_bonus = 1.5,
+        base_spots_per_km2 = 0.1,
         has_starting_area_placement = false,
         random_spot_size_minimum = 0.01,
         random_spot_size_maximum = 0.1,
         regular_blob_amplitude_multiplier = 1,
-        richness_post_multiplier = 1.0,
         additional_richness = 350000,
         regular_rq_factor_multiplier = 0.1,
         candidate_spot_count = 22,
@@ -639,16 +649,15 @@ if mods["Krastorio2"] then
       selection_box = {{-3.5, -3.5 }, {3.5, 3.5}},
       autoplace = resource_autoplace.resource_autoplace_settings({
         name = "sp-grobgnum",
-        order = "f",
+        order = "z",
         base_density = 1,
-        richness_multiplier = 1,
-        richness_multiplier_distance_bonus = 1.5,
-        base_spots_per_km2 = 0.2,
+        richness_post_multiplier = 20,
+        richness_post_multiplier_distance_bonus = 1.5,
+        base_spots_per_km2 = 0.1,
         has_starting_area_placement = false,
         random_spot_size_minimum = 0.01,
         random_spot_size_maximum = 0.1,
         regular_blob_amplitude_multiplier = 1,
-        richness_post_multiplier = 1.0,
         additional_richness = 350000,
         regular_rq_factor_multiplier = 0.1,
         candidate_spot_count = 22,
@@ -701,16 +710,15 @@ if mods["Krastorio2"] then
       selection_box = {{-3.5, -3.5}, {3.5, 3.5}},
       autoplace = resource_autoplace.resource_autoplace_settings({
         name = "sp-rukite",
-        order = "f",
+        order = "z",
         base_density = 1,
-        richness_multiplier = 1,
-        richness_multiplier_distance_bonus = 1.5,
-        base_spots_per_km2 = 0.2,
+        richness_post_multiplier = 20,
+        richness_post_multiplier_distance_bonus = 1.5,
+        base_spots_per_km2 = 0.1,
         has_starting_area_placement = false,
         random_spot_size_minimum = 0.01,
         random_spot_size_maximum = 0.1,
         regular_blob_amplitude_multiplier = 1,
-        richness_post_multiplier = 1.0,
         additional_richness = 350000,
         regular_rq_factor_multiplier = 0.1,
         candidate_spot_count = 22,
@@ -763,16 +771,15 @@ if mods["Krastorio2"] then
       selection_box = {{-3.5, -3.5}, {3.5, 3.5}},
       autoplace = resource_autoplace.resource_autoplace_settings({
         name = "sp-yemnuth",
-        order = "f",
+        order = "z",
         base_density = 1,
-        richness_multiplier = 1,
-        richness_multiplier_distance_bonus = 1.5,
-        base_spots_per_km2 = 0.2,
+        richness_post_multiplier = 20,
+        richness_post_multiplier_distance_bonus = 1.5,
+        base_spots_per_km2 = 0.1,
         has_starting_area_placement = false,
         random_spot_size_minimum = 0.01,
         random_spot_size_maximum = 0.1,
         regular_blob_amplitude_multiplier = 1,
-        richness_post_multiplier = 1.0,
         additional_richness = 350000,
         regular_rq_factor_multiplier = 0.1,
         candidate_spot_count = 22,
